after trainer, before transaction

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -8,24 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout System</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/basicStyle.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/insertCustomerStyle.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/searchCustomerStyle.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/editCustomerModalStyle.css') }}">
-    <script src="{{ url_for('static', filename='scripts/editFunc.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/customerStyle.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/trainerStyle.css') }}">
+    <script src="{{ url_for('static', filename='scripts/editCustomerFunc.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/editTrainerFunc.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/showOrHideFunc.js') }}"></script>
 </head>
 
 <body>
     <h1>Online Workout Management System</h1>
     <!-- 顶部功能模块,每个按钮关联一个功能 -->
-    {% include 'top_meu.html' %}
+    {% include 'button_meu.html' %}
     <!-- 用户 -->
     {% include 'customer.html' %}
+    <!-- 教练 -->
+    {% include 'trainer.html' %}
     <!-- 展示什么表格 -->
     {% if func=="customer" or func=="search_customer" %}
         <script>customerTableVisibility()</script>
-    {% else %}
-
+    {% elif  func=="trainer" or func=="search_trainer" %}
+        <script>trainerTableVisibility()</script>
     {% endif %}
 </body>
 </html>
