--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -4,5 +4,9 @@
     </form>
     <button onclick="insertCustomerVisibility()">Insert Customer</button>
     <button onclick="searchCustomerVisibility()">Search Customer</button>
-    <button onclick="trainerTableVisibility()">Trainer</button>
+        <form action="/trainer" method="post" style="display: inline;">
+        <button type="submit" onclick="trainerTableVisibility()">Trainer</button>
+    </form>
+    <button onclick="insertTrainerVisibility()">Insert Trainer</button>
+    <button onclick="searchTrainerVisibility()">Search Trainer</button>
 </div>
