--- a/templates/customer.html
+++ b/templates/customer.html
@@ -85,13 +85,11 @@
                 <td>{{ customer[7] }}</td>
                 <td>{{ customer[8] }}</td>
                 <td>{{ customer[9] }}</td>
-
                 <td>
                     <form action="/deleteCustomer/{{ customer[0] }}" method="post">
                         <button type="submit">Delete</button>
                     </form>
                 </td>
-
                 <td>
                     <!--这段代码的作用是将服务器端获取到的客户数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
                     <button class="edit-btn" onclick="openCustomerEditModal(this)">Edit</button>
@@ -104,27 +102,27 @@
 <div id="editCustomerModal" class="modal" style="display: none;">
     <div class="modal-content">
         <h2>Edit Customer</h2>
-        <form id="editForm">
-            <label for="edit_first_name">First Name:</label>
-            <input type="text" id="edit_first_name" name="first_name" required pattern=".{1,50}"><br>
-            <label for="edit_last_name">Last Name:</label>
-            <input type="text" id="edit_last_name" name="last_name" required pattern=".{1,50}"><br>
-            <label for="edit_address">Address:</label>
-            <input type="text" id="edit_address" name="address" pattern=".{0,255}"><br>
-            <label for="edit_phone">Phone:</label>
-            <input type="text" id="edit_phone" name="phone" required pattern=".{1,25}"><br>
-            <label for="edit_email">Email:</label>
-            <input type="email" id="edit_email" name="email" required pattern=".{1,25}"><br>
-            <label for="edit_birthdate">Birthdate:</label>
-            <input type="date" id="edit_birthdate" name="birthdate"><br>
-            <label for="edit_fitness_level">Fitness Level:</label>
-            <input type="text" id="edit_fitness_level" name="fitness_level" required pattern=".{1,15}"
+        <form id="editCustomerForm">
+            <label for="edit_customer_first_name">First Name:</label>
+            <input type="text" id="edit_customer_first_name" name="first_name" required pattern=".{1,50}"><br>
+            <label for="edit_customer_last_name">Last Name:</label>
+            <input type="text" id="edit_customer_last_name" name="last_name" required pattern=".{1,50}"><br>
+            <label for="edit_customer_address">Address:</label>
+            <input type="text" id="edit_customer_address" name="address" pattern=".{0,255}"><br>
+            <label for="edit_customer_phone">Phone:</label>
+            <input type="text" id="edit_customer_phone" name="phone" required pattern=".{1,25}"><br>
+            <label for="edit_customer_email">Email:</label>
+            <input type="email" id="edit_customer_email" name="email" required pattern=".{1,25}"><br>
+            <label for="edit_customer_birthdate">Birthdate:</label>
+            <input type="date" id="edit_customer_birthdate" name="birthdate"><br>
+            <label for="edit_customer_fitness_level">Fitness Level:</label>
+            <input type="text" id="edit_customer_fitness_level" name="fitness_level" required pattern=".{1,15}"
                    title="A,B,C,D,F"><br>
-            <label for="edit_exercise_history">Exercise History:</label>
-            <input type="text" id="edit_exercise_history" name="exercise_history"><br>
-            <label for="edit_medical_history">Medical History:</label>
-            <input type="text" id="edit_medical_history" name="medical_history"><br>
-            <button type="button" onclick="updateCustomer()">Update Customer</button>
+            <label for="edit_customer_exercise_history">Exercise History:</label>
+            <input type="text" id="edit_customer_exercise_history" name="exercise_history"><br>
+            <label for="edit_customer_medical_history">Medical History:</label>
+            <input type="text" id="edit_customer_medical_history" name="medical_history"><br>
+            <button type="button" onclick="updateCustomer()">Update</button>
             <button type="button" onclick="closeEditCustomerModal()">Cancel</button>
         </form>
     </div>
