after trainer,  transaction

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -23,6 +23,8 @@
     {% include 'customer.html' %}
     <!-- 教练 -->
     {% include 'trainer.html' %}
+    <!-- 事务 -->
+    {% include 'transaction.html' %}
     <!-- 展示什么表格 -->
     {% if func=="customer" or func=="search_customer" %}
         <script>customerTableVisibility()</script>
