--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -8,5 +8,9 @@
         <button type="submit" onclick="trainerTableVisibility()">Trainer</button>
     </form>
     <button onclick="insertTrainerVisibility()">Insert Trainer</button>
-    <button onclick="searchTrainerVisibility()">Search Trainer</button>
+    <button onclick="searchTrainerVisibility()">Search Trainer</button><br>
+
+    <button>Func1</button>
+    <button>Func2</button>
+    <button>Func3</button>
 </div>
