--- a/templates/customer.html
+++ b/templates/customer.html
@@ -20,7 +20,7 @@
         <input type="text" id="exercise_history" name="exercise_history"><br>
         <label for="medical_history">Medical History:</label>
         <input type="text" id="medical_history" name="medical_history"><br>
-        <button type="submit">Add Customer</button>
+        <button type="submit">Add</button>
     </form>
 </div>
 <!-- 查询用户 -->
