--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -1,4 +1,4 @@
-<!-- 注册用户 -->
+<!-- 注册教练 -->
 <div id="insertTrainer" style="display: none;">
     <h2>Insert Trainer</h2>
     <form action="/addTrainer" method="post">
@@ -12,10 +12,10 @@
         <input type="text" id="phone" name="phone" required pattern=".{1,25}" title="1 ~ 25 characters">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required pattern=".{1,25}" title="1 ~ 25 characters"><br>
-        <button type="submit">Add Trainer</button>
+        <button type="submit">Add</button>
     </form>
 </div>
-<!-- 查询用户 -->
+<!-- 查询教练 -->
 <div id="searchTrainer" style="display: none;">
     <h2>Search Trainer</h2>
     <form action="/searchTrainer" method="post">
@@ -47,7 +47,7 @@
             <th>Edit</th>
         </tr>
         {% for trainer in trainer_data %}
-            <!--这段代码的作用是将服务器端获取到的客户数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
+            <!--这段代码的作用是将服务器端获取到的教练数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
             <!--如果没有这行代码，将失去在客户端（前端）通过 JavaScript 获取和操作每一行数据的能力。-->
             <tr data-trainer-id="{{ trainer[0] }}"
                 data-first-name="{{ trainer[1] }}"
@@ -67,7 +67,7 @@
                     </form>
                 </td>
                 <td>
-                    <!--这段代码的作用是将服务器端获取到的客户数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
+                    <!--这段代码的作用是将服务器端获取到的教练数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
                     <button class="edit-btn" onclick="openTrainerEditModal(this)">Edit</button>
                 </td>
             </tr>
