--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -4,13 +4,14 @@
     </form>
     <button onclick="insertCustomerVisibility()">Insert Customer</button>
     <button onclick="searchCustomerVisibility()">Search Customer</button>
-        <form action="/trainer" method="post" style="display: inline;">
+    <form action="/trainer" method="post" style="display: inline;">
         <button type="submit" onclick="trainerTableVisibility()">Trainer</button>
     </form>
     <button onclick="insertTrainerVisibility()">Insert Trainer</button>
-    <button onclick="searchTrainerVisibility()">Search Trainer</button><br>
-
-    <button>Func1</button>
-    <button>Func2</button>
-    <button>Func3</button>
+    <button onclick="searchTrainerVisibility()">Search Trainer</button>
+    <form action="/transaction" method="post" style="display: inline;">
+        <button type="submit" onclick="transactionTableVisibility()">Transaction</button>
+    </form>
+    <button onclick="insertTransactionVisibility()">Insert Transaction</button>
+    <button onclick="searchTransactionVisibility()">Search Transaction</button><br>
 </div>
