--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -9,7 +9,7 @@
         <label for="address">Address:</label>
         <input type="text" id="address" name="address" pattern=".{0,255}" title="0 ~ 255 characters"><br>
         <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone" required pattern=".{1,25}" title="1 ~ 25 characters">
+        <input type="text" id="phone" name="phone" required pattern="\d{1,25}" title="1 ~ 25 numbers">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required pattern=".{1,25}" title="1 ~ 25 characters"><br>
         <button type="submit">Add</button>
@@ -20,15 +20,15 @@
     <h2>Search Trainer</h2>
     <form action="/searchTrainer" method="post">
         <label for="trainer_id">Trainer ID:</label>
-        <input type="text" id="trainer_id" name="trainer_id"><br>
+        <input type="text" id="trainer_id" name="trainer_id" pattern="\d{0,10}"><br>
         <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name"><br>
+        <input type="text" id="first_name" name="first_name" pattern=".{0,50}"><br>
         <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name"><br>
+        <input type="text" id="last_name" name="last_name" pattern=".{0,50}"><br>
         <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone"><br>
+        <input type="text" id="phone" name="phone" pattern="\d{0,25}"><br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br>
+        <input type="email" id="email" name="email" pattern=".{0,25}"><br>
         <button type="submit">Search</button>
     </form>
 </div>
@@ -86,7 +86,7 @@
             <label for="edit_trainer_address">Address:</label>
             <input type="text" id="edit_trainer_address" name="address" pattern=".{0,255}"><br>
             <label for="edit_trainer_phone">Phone:</label>
-            <input type="text" id="edit_trainer_phone" name="phone" required pattern=".{1,25}"><br>
+            <input type="text" id="edit_trainer_phone" name="phone" required pattern="\d{1,25}"><br>
             <label for="edit_trainer_email">Email:</label>
             <input type="email" id="edit_trainer_email" name="email" required pattern=".{1,25}"><br>
             <button type="button" onclick="updateTrainer()">Update</button>
