--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -3,13 +3,13 @@
     <h2>Insert Transaction</h2>
     <form action="/addTransaction" method="post">
         <label for="customer_id">Customer ID:</label>
-        <input type="text" id="customer_id" name="customer_id" required pattern=".{1,10}" title="1 ~ 10 characters">
+        <input type="text" id="customer_id" name="customer_id" required pattern="\d{1,10}" title="1 ~ 10 numbers"><br>
         <label for="trainer_id">Trainer ID:</label>
-        <input type="text" id="trainer_id" name="trainer_id" required pattern=".{1,10}" title="1 ~ 10 characters"><br>
+        <input type="text" id="trainer_id" name="trainer_id" required pattern="\d{1,10}" title="1 ~ 10 numbers"><br>
         <label for="program_level">Program Level:</label>
-        <input type="text" id="program_level" name="program_level" required pattern=".{1,15}" title="黄金、白银、青铜"><br>
+        <input type="text" id="program_level" name="program_level" required pattern="(gold|silver|bronze)" title="Only gold, silver or bronze"><br>
         <label for="monthly_fee">Monthly Fee:</label>
-        <input type="text" id="monthly_fee" name="monthly_fee" required pattern="^\d{1,8}(\.\d{1,2})?$">
+        <input type="text" id="monthly_fee" name="monthly_fee" required pattern="^\d{1,8}(\.\d{1,2})?$"><br>
         <label for="assignment_date">Assignment Date:</label>
         <input type="date" id="assignment_date" name="assignment_date" required>
         <button type="submit">Insert</button>
@@ -20,17 +20,17 @@
     <h2>Search Transaction</h2>
     <form action="/searchTransaction" method="post">
         <label for="customer_id">Customer ID:</label>
-        <input type="text" id="customer_id" name="customer_id" required pattern=".{1,10}" title="1 ~ 10 characters">
+        <input type="text" id="customer_id" name="customer_id" pattern="\d{0,10}" title="0 ~ 10 numbers"><br>
         <label for="trainer_id">Trainer ID:</label>
-        <input type="text" id="trainer_id" name="trainer_id" required pattern=".{1,10}" title="1 ~ 10 characters"><br>
+        <input type="text" id="trainer_id" name="trainer_id" pattern="\d{0,10}" title="0 ~ 10 numbers"><br>
         <label for="program_level">Program Level:</label>
-        <input type="text" id="program_level" name="program_level" required pattern=".{1,15}" title="黄金、白银、青铜"><br>
+        <input type="text" id="program_level" name="program_level" pattern="(gold|silver|bronze)" title="Only gold, silver or bronze"><br>
         <label for="assignment_date">Assignment Date:</label>
-        <input type="date" id="assignment_date" name="assignment_date" required>
+        <input type="date" id="assignment_date" name="assignment_date">
         <button type="submit">Search</button>
     </form>
 </div>
-<!-- transaction table, 其中含有!!删除!!和!!修改!!按钮 -->
+<!-- transaction table, 其中含有!!删除!!按钮 -->
 <div id="transactionTable" style="display: none;">
     <h2>Transaction</h2>
     <table border="1">
@@ -41,16 +41,9 @@
             <th>Monthly Fee</th>
             <th>Assignment Date</th>
             <th>Delete</th>
-            <th>Edit</th>
         </tr>
         {% for transaction in transaction_data %}
-            <!--这段代码的作用是将服务器端获取到的客户数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
-            <!--如果没有这行代码，将失去在客户端（前端）通过 JavaScript 获取和操作每一行数据的能力。-->
-            <tr data-customer-id="{{ customer[0] }}"
-                data-first-name="{{ customer[1] }}"
-                data-last-name="{{ customer[2] }}"
-                data-address="{{ customer[3] }}"
-                data-phone="{{ customer[4] }}">
+            <tr>
                 <td>{{ customer[0] }}</td>
                 <td>{{ customer[1] }}</td>
                 <td>{{ customer[2] }}</td>
@@ -61,31 +54,7 @@
                         <button type="submit">Delete</button>
                     </form>
                 </td>
-                <td>
-                    <!--这段代码的作用是将服务器端获取到的客户数据动态地填充到每一行的 data-* 属性中，以便在客户端（浏览器）的 JavaScript 中方便地获取并使用这些数据-->
-                    <button class="edit-btn" onclick="openTransactionEditModal(this)">Edit</button>
-                </td>
             </tr>
         {% endfor %}
     </table>
-</div>
-<!-- edit customer功能的模态窗 -->
-<div id="editTransactionModal" class="modal" style="display: none;">
-    <div class="modal-content">
-        <h2>Edit Transaction</h2>
-        <form id="editTransactionForm">
-            <label for="edit_customer_id">Customer ID:</label>
-            <input type="text" id="edit_customer_id" name="customer_id" required pattern=".{1,10}" title="1 ~ 10 characters">
-            <label for="edit_trainer_id">Trainer ID:</label>
-            <input type="text" id="edit_trainer_id" name="trainer_id" required pattern=".{1,10}" title="1 ~ 10 characters"><br>
-            <label for="edit_program_level">Program Level:</label>
-            <input type="text" id="edit_program_level" name="program_level" required pattern=".{1,15}" title="黄金、白银、青铜"><br>
-            <label for="edit_monthly_fee">Monthly Fee:</label>
-            <input type="text" id="edit_monthly_fee" name="monthly_fee" required pattern="^\d{1,8}(\.\d{1,2})?$">
-            <label for="edit_assignment_date">Assignment Date:</label>
-            <input type="date" id="edit_assignment_date" name="assignment_date" required>
-            <button type="button" onclick="updateTransaction()">Update</button>
-            <button type="button" onclick="closeEditTransactionModal()">Cancel</button>
-        </form>
-    </div>
 </div>
