--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -14,4 +14,11 @@
     </form>
     <button onclick="insertTransactionVisibility()">Insert Transaction</button>
     <button onclick="searchTransactionVisibility()">Search Transaction</button><br>
+
+
+
+    <button onclick="overAgeVisibility()">Over an Age</button>
+    <form action="/fitGold" method="post" style="display: inline;">
+        <button onclick="fitGoldVisibility()">Fit And Gold Customer</button>
+    </form>
 </div>
