--- a/templates/customer.html
+++ b/templates/customer.html
@@ -13,7 +13,7 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required pattern=".{1,25}" title="1 ~ 25 characters"><br>
         <label for="birthdate">Birthdate:</label>
-        <input type="date" id="birthdate" name="birthdate">
+        <input type="date" id="birthdate" name="birthdate" required>
         <label for="fitness_level">Fitness Level:</label>
         <input type="text" id="fitness_level" name="fitness_level" required pattern="[A-F]" title="Only A, B, C, D, or F"><br>
         <label for="exercise_history">Exercise History:</label>
@@ -114,7 +114,7 @@
             <label for="edit_customer_email">Email:</label>
             <input type="email" id="edit_customer_email" name="email" required pattern=".{1,25}"><br>
             <label for="edit_customer_birthdate">Birthdate:</label>
-            <input type="date" id="edit_customer_birthdate" name="birthdate"><br>
+            <input type="date" id="edit_customer_birthdate" name="birthdate" required><br>
             <label for="edit_customer_fitness_level">Fitness Level:</label>
             <input type="text" id="edit_customer_fitness_level" name="fitness_level" required pattern="[A-F]"
                    title="Only A,B,C,D or F"><br>
