--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -7,7 +7,7 @@
         <label for="trainer_id">Trainer ID:</label>
         <input type="text" id="trainer_id" name="trainer_id" required pattern="\d{1,10}" title="1 ~ 10 numbers"><br>
         <label for="program_level">Program Level:</label>
-        <input type="text" id="program_level" name="program_level" required pattern="(gold|silver|bronze)" title="Only gold, silver or bronze"><br>
+        <input type="text" id="program_level" name="program_level" required pattern="(Gold|Silver|Bronze)" title="Only Gold, Silver or Bronze"><br>
         <label for="monthly_fee">Monthly Fee:</label>
         <input type="text" id="monthly_fee" name="monthly_fee" required pattern="^\d{1,8}(\.\d{1,2})?$"><br>
         <label for="assignment_date">Assignment Date:</label>
@@ -24,7 +24,7 @@
         <label for="trainer_id">Trainer ID:</label>
         <input type="text" id="trainer_id" name="trainer_id" pattern="\d{0,10}" title="0 ~ 10 numbers"><br>
         <label for="program_level">Program Level:</label>
-        <input type="text" id="program_level" name="program_level" pattern="(gold|silver|bronze)" title="Only gold, silver or bronze"><br>
+        <input type="text" id="program_level" name="program_level" pattern="(Gold|Silver|Bronze)" title="Only Gold, Silver or Bronze"><br>
         <label for="assignment_date">Assignment Date:</label>
         <input type="date" id="assignment_date" name="assignment_date">
         <button type="submit">Search</button>
