--- a/templates/basic.html
+++ b/templates/basic.html
@@ -39,6 +39,8 @@
         <script>overAgeVisibility()</script>
     {% elif func=="fit_and_gold" %}
         <script>fitGoldVisibility()</script>
+    {% elif func=="clients_per_trainer" %}
+        <script>clientNumberVisibility()</script>
     {% endif %}
 </body>
 </html>
