--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -21,4 +21,7 @@
     <form action="/fitGold" method="post" style="display: inline;">
         <button onclick="fitGoldVisibility()">Fit And Gold Customer</button>
     </form>
+    <form action="/clientNumber" method="post" style="display: inline;">
+        <button onclick="clientNumberVisibility()">Clients Per Trainer</button>
+    </form>
 </div>
