--- a/templates/basic.html
+++ b/templates/basic.html
@@ -41,6 +41,8 @@
         <script>fitGoldVisibility()</script>
     {% elif func=="clients_per_trainer" %}
         <script>clientNumberVisibility()</script>
+    {% elif func=="trainer_money_report" %}
+        <script>moneyReportVisibility()</script>
     {% endif %}
 </body>
 </html>
