--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -44,13 +44,13 @@
         </tr>
         {% for transaction in transaction_data %}
             <tr>
-                <td>{{ customer[0] }}</td>
-                <td>{{ customer[1] }}</td>
-                <td>{{ customer[2] }}</td>
-                <td>{{ customer[3] }}</td>
-                <td>{{ customer[4] }}</td>
+                <td>{{ transaction[0] }}</td>
+                <td>{{ transaction[1] }}</td>
+                <td>{{ transaction[2] }}</td>
+                <td>{{ transaction[3] }}</td>
+                <td>{{ transaction[4] }}</td>
                 <td>
-                    <form action="/deleteTransaction/{{ transaction[0] }}" method="post">
+                    <form action="/deleteTransaction/{{ transaction[0] }}/{{ transaction[1] }}" method="post">
                         <button type="submit">Delete</button>
                     </form>
                 </td>
