--- a/templates/customer.html
+++ b/templates/customer.html
@@ -1,3 +1,11 @@
+<!-- 用户 -->
+<div id="Customer" style="display: none;">
+    <form action="/customer" method="post" style="display: inline;">
+        <button type="submit" onclick="customerTableVisibility()">Customer</button>
+    </form>
+    <button onclick="insertCustomerVisibility()">Insert Customer</button>
+    <button onclick="searchCustomerVisibility()">Search Customer</button>
+</div>
 <!-- 注册用户 -->
 <div id="insertCustomer" style="display: none;">
     <h2>Insert Customer</h2>
