--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,3 +1,12 @@
+<!-- 事务 -->
+<div id="Transaction" style="display: none;">
+    <form action="/transaction" method="post" style="display: inline;">
+        <button type="submit" onclick="transactionTableVisibility()">Transaction</button>
+    </form>
+    <button onclick="insertTransactionVisibility()">Insert Transaction</button>
+    <button onclick="searchTransactionVisibility()">Search Transaction</button>
+</div>
+
 <!-- 插入事务 -->
 <div id="insertTransaction" style="display: none;">
     <h2>Insert Transaction</h2>
