--- a/static/styles/customerStyle.css
+++ b/static/styles/customerStyle.css
@@ -1,4 +1,19 @@
-/* insert */
+/* Customer */
+#Customer button {
+    font-size: 20px;
+    /* display: block; 将按钮元素设置为块级元素，使其独占一行 */
+    margin-top: 22px; /* 调整按钮与上一个区域的间隔 */
+    background-color: transparent; /* 设置透明背景 */
+    /*border: none;  去除边框 */
+    cursor: pointer;
+    color: white; /* 设置文本颜色，以便可见，您可以根据需要调整 */
+}
+#Customer button:hover {
+    color: #0c50b8; /* 鼠标悬停时字体颜色变为 */
+    text-decoration: underline; /* 鼠标悬停时添加下划线 */
+    background-color: rgba(248, 245, 245, 0); /* 鼠标悬停时背景色变为 */
+}
+/* insertCustomer */
 #insertCustomer h2 {
     text-align: center;
 }
@@ -33,8 +48,7 @@
     cursor: pointer;
     color: white; /* 设置文本颜色，以便可见，您可以根据需要调整 */
 }
-
-/* search */
+/* searchCustomer */
 #searchCustomer h2 {
     text-align: center;
 }
@@ -60,7 +74,6 @@
     cursor: pointer;
     color: white; /* 设置文本颜色，以便可见，您可以根据需要调整 */
 }
-
 /* 模态窗属性 */
 #editCustomerModal {
     position: fixed;
