--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -1,3 +1,11 @@
+<!-- 教练 -->
+<div id="Trainer" style="display: none;">
+    <form action="/trainer" method="post" style="display: inline;">
+        <button type="submit" onclick="trainerTableVisibility()">Trainer</button>
+    </form>
+    <button onclick="insertTrainerVisibility()">Insert Trainer</button>
+    <button onclick="searchTrainerVisibility()">Search Trainer</button>
+</div>
 <!-- 注册教练 -->
 <div id="insertTrainer" style="display: none;">
     <h2>Insert Trainer</h2>
