--- a/templates/basic.html
+++ b/templates/basic.html
@@ -43,6 +43,10 @@
         <script>clientNumberVisibility()</script>
     {% elif func=="trainer_money_report" %}
         <script>moneyReportVisibility()</script>
+    {% else %}
+        <div id="error_case">
+            <p>Error:{{ func }}. Please try again.</p>
+        </div>
     {% endif %}
 </body>
 </html>
