--- a/templates/procedure.html
+++ b/templates/procedure.html
@@ -59,7 +59,7 @@
 
 <!-- clients per trainer -->
 <div id="clientNumber" style="display: none;">
-    <h2 id="clientNumberTitle">Fit And Gold Customer</h2>
+    <h2 id="clientNumberTitle">Clients Per Trainer</h2>
     <table border="1">
         <tr>
             <th>First Name</th>
@@ -80,7 +80,7 @@
 
 <!-- trainer monthly money report -->
 <div id="moneyReport" style="display: none;">
-    <h2 id="moneyReportTitle">Fit And Gold Customer</h2>
+    <h2 id="moneyReportTitle">Trainer Monthly Money Report</h2>
     <table border="1">
         <tr>
             <th>T.First Name</th>
