--- a/templates/button_meu.html
+++ b/templates/button_meu.html
@@ -24,5 +24,5 @@
     <!-- 教练 -->
     <button onclick="trainerVisibility()">Trainer</button>
     <!-- 事务 -->
-    <button onclick="transactionVisibility()">Transaction Function</button>
+    <button onclick="transactionVisibility()">Transaction</button>
 </div>
